# audiogridder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  DEVELOP.md  README.md  build.py  vcpkg.json
.github/workflows/: c-cpp.yml
Common/Source/: AudioRingBuffer.hpp  ChannelMapper.hpp  ChannelSet.hpp  CoreDump.cpp  CoreDump.hpp  Defaults.cpp  Defaults.hpp  ImageDiff.hpp  KeyAndMouse.cpp  KeyAndMouse.hpp  KeyAndMouseCommon.hpp  Logger.cpp  Logger.hpp  MemoryFile.cpp  MemoryFile.hpp  Message.cpp  Message.hpp  Metrics.cpp  Metrics.hpp  MiniDump.cpp  MiniDump.hpp  NumberConversion.hpp  Sentry.cpp  Sentry.hpp  ServerPlugin.hpp  ServiceReceiver.cpp  ServiceReceiver.hpp  SharedInstance.hpp  Signals.cpp  Signals.hpp  TraceReader.cpp  Tracer.cpp  Tracer.hpp  Utils.cpp  Utils.hpp  Version.hpp  WindowHelper.cpp  WindowHelper.hpp  WindowHelper.mm  WindowPositions.cpp  (+6 more)
Plugin/: AudioGridder.jucer  CMakeLists.txt
Plugin/Fx/: AudioGridder.jucer
Plugin/Inst/: AudioGridder.jucer
Plugin/Midi/: AudioGridder.jucer
Plugin/Source/: AudioStreamer.hpp  Client.cpp  Client.hpp  GenericEditor.cpp  GenericEditor.hpp  ImageReader.cpp  ImageReader.hpp  Images.cpp  Images.hpp  Logger.cpp  Logger.hpp  NewServerWindow.cpp  NewServerWindow.hpp  PluginButton.cpp  PluginButton.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginMonitor.cpp  PluginMonitor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  PluginSearchWindow.cpp  PluginSearchWindow.hpp  ServerPlugin.hpp  ServiceReceiver.cpp  ServiceReceiver.hpp  StatisticsWindow.cpp  StatisticsWindow.hpp
PluginTray/: CMakeLists.txt
PluginTray/Source/: App.cpp  App.hpp  Images.cpp  Images.hpp  PluginMonitor.cpp  PluginMonitor.hpp
Server/: AudioGridderServer.jucer  CMakeLists.txt
Server/Source/: App.cpp  App.hpp  AudioWorker.cpp  AudioWorker.hpp  CPUInfo.cpp  CPUInfo.hpp  Defaults.hpp  ImageDiff.hpp  Images.cpp  Images.hpp  KeyAndMouse.cpp  KeyAndMouse.hpp  MenuBarWindow.cpp  MenuBarWindow.hpp  Message.hpp  ParameterValue.hpp  PluginListComponent.cpp  PluginListComponent.hpp  PluginListWindow.cpp  PluginListWindow.hpp  Processor.cpp  Processor.hpp  ProcessorChain.cpp  ProcessorChain.hpp  ProcessorClient.cpp  ProcessorClient.hpp  ProcessorWindow.cpp  ProcessorWindow.hpp  Sandbox.cpp  Sandbox.hpp  Screen.cpp  Screen.h  Screen.mm  ScreenHelper_linux.cpp  ScreenRecorder.cpp  ScreenRecorder.hpp  ScreenWorker.cpp  ScreenWorker.hpp  Server.cpp  Server.hpp  (+11 more)
Server/Source/ServerSettings/: DiagnosticsTab.cpp  DiagnosticsTab.hpp  MainTab.cpp  MainTab.hpp  PluginFormatsTab.cpp  PluginFormatsTab.hpp  ScreenCapturingTab.cpp  ScreenCapturingTab.hpp  StartupTab.cpp  StartupTab.hpp  TabCommon.h
Tests/: CMakeLists.txt
Tests/Source/: Main.cpp  TestsHelper.hpp
Tests/Source/Plugin/: AudioStreamerTest.hpp
Tests/Source/Server/: MultiMonoTest.hpp  ProcessorChainTest.hpp  SandboxPluginTest.hpp  ScanPluginsTest.hpp
cmake/: FindFFmpeg.cmake  FindWebP.cmake
package/: AudioGridder.iss.in  AudioGridder.pkgproj  AudioGridderPlugin-10.7-x86_64.pkgproj  AudioGridderPlugin-arm64.pkgproj  AudioGridderPlugin-universal.pkgproj  AudioGridderPlugin-x86_64.pkgproj  AudioGridderPlugin.iss.in  AudioGridderPlugin.pkgproj  AudioGridderServer-10.7-x86_64.pkgproj  AudioGridderServer-arm64.pkgproj  AudioGridderServer-universal.pkgproj  AudioGridderServer-x86_64.pkgproj  AudioGridderServer.iss.in  AudioGridderServer.pkgproj  AudioGridderServer10.7-x86_64.pkgproj  AudioGridderServer10.7.pkgproj  Version.hpp.in  archiveWin.bat.in  audiogridderserver.desktop  buildLinux.sh  buildMac.sh  buildTraceReader.sh  buildWin.bat  coresPerms.sh  createUniversalBinaries.sh  format.sh  install-trayapp-linux.sh  install_linux_plugin.sh  install_linux_server.sh  license_MIT.txt  resetpermsMac.sh  setversion.sh
